fix(homepage): dark mode cursor color

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -84,6 +84,7 @@ div[class^='announcementBar_'] .close {
   font-size: 0;
   background-color: var(--ifm-navbar-link-hover-color);
   --logo-text: url('/img/navbar-logotext.svg');
+  -webkit-mask-image: var(--logo-text);
   mask-image: var(--logo-text);
   mask-repeat: no-repeat;
 }
